// `protoc --gofast_out=. *.proto`
syntax = "proto3";
package pb;


// on DataChain
enum DataTxType {
    DataTxErr = 0;

    // register 
    CreateRole = 1;      // 更新，在结算链上的信息改变的时候；by keeper/provider/user
    UpdateGasMoney = 3;  // by keeper/provider/user/fs
    WithdrawFee = 4;     // 获取链上消息费; by keeper
    
    UpdateNetAddr = 6;   // 更新网络地址; by provider; needed(?)； 或者user和provider私下协商
    
    SetEpoch = 7;        // 进入下一个周期；by keeper
    
    // data tx; after user is added
    CreateBucket = 11;       // by user
    
    // order 
    DataPreOrder = 12;       // by user
    DataOrder = 13;          // contain piece and segment; by user
    DataCommitOrder = 14;    // by user or keeper; collect sign for order?  
    
    CommitSector = 15;       // confirm piece; by provider
    SetChalEpoch = 16;       // set chal epoch and seed
    SegmentProof = 17;       // segment proof; by provider
    SectorProof = 18;        // sector proof; by provider
    SegmentFault = 19;       // segment remove; by provider
    SectorFault = 20;        // sector remove; by provider
    PostIncome = 21;         // add post income for provider; by keeper
}